Add docs folder

--- a/public/main.html
+++ b/public/main.html
@@ -156,8 +156,8 @@
                     </tr>
                     <tr>
                       <td>C311</td>
-                      <td>AI</td>
-                      <td>Artificial Intelligence</td>
+                      <td>DBMS</td>
+                      <td>Database Management Systems</td>
                       <td class="mdc-data-table--numeric">4</td>
                       <td class="mdc-data-table--numeric">0</td>
                       <td class="mdc-data-table--numeric">1</td>
@@ -181,8 +181,8 @@
           </section>
           <!-- ... content ... -->
           <section class="mdc-card__actions mdc-card__actions--full-bleed">
-            <button class="mdc-button mdc-button--compact mdc-card__action">Action 1</button>
-            <button class="mdc-button mdc-button--compact mdc-card__action">Action 2</button>
+            <button class="mdc-button mdc-button--compact mdc-card__action"></button>
+            <button class="mdc-button mdc-button--compact mdc-card__action"></button>
           </section>
 
         </div>
