--- a/public/main.html
+++ b/public/main.html
@@ -152,6 +152,54 @@
         </div>
       </div>
       <div class="mdc-layout-grid__inner">
+        <div class="mdc-card mdc-layout-grid__cell--span-12">
+          <section class="mdc-card__primary">
+            <h1 class="mdc-typography--headline">Add Course</h1>
+            <div class="mdc-layout-grid__inner">
+              <div id="alchemy-course-add-input--code"
+                   class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-layout-grid__cell--span-6">
+                <i class="material-icons mdc-text-field__icon" tabindex="0">search</i>
+                <input type="text" class="mdc-text-field__input">
+                <label for="alchemy-course-filter--search-input" class="mdc-text-field__label">Search</label>
+                <div class="mdc-text-field__bottom-line"></div>
+              </div>
+              <div id="alchemy-course-add-input--department" class="mdc-select  mdc-layout-grid__cell--span-4"
+                   role="listbox">
+                <div class="mdc-select__surface" tabindex="0">
+                  <div class="mdc-select__label"></div>
+                  <div class="mdc-select__selected-text"></div>
+                  <div class="mdc-select__bottom-line"></div>
+                </div>
+                <div class="mdc-menu mdc-select__menu">
+                  <ul class="mdc-list mdc-menu__items">
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell--span-12">
+                <div id="alchemy-course-filter--by-search" class="mdc-data-table">
+                  <table class="mdc-data-table__content">
+                    <thead>
+
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- ... content ... -->
+          <section class="mdc-card__actions mdc-card__actions--full-bleed">
+            <button class="mdc-button mdc-button--compact mdc-card__action"></button>
+            <button class="mdc-button mdc-button--compact mdc-card__action"></button>
+          </section>
+
+        </div>
+      </div>
+      <div class="mdc-layout-grid__inner">
         <div class="mdc-card mdc-theme--background mdc-layout-grid__cell--span-12">
           <div class="mdc-card__actions mdc-card__actions--full-bleed">
             <div class="mdc-card__action-buttons">
