--- a/public/main.html
+++ b/public/main.html
@@ -427,9 +427,8 @@
 <script src="js/alchemy/Model.js"></script>
 <script src="js/alchemy/Alchemy.js"></script>
 
-<!-- build:js scripts/main.min.js -->
-<script src="js/main.js"></script>
-<!-- endbuild -->
+<!-- scripts for ui manipulation -->
+<script src="js/utils.js"></script>
 
 <!-- scripts for ui manipulation -->
 <script src="js/ui.js"></script>
