--- a/public/main.html
+++ b/public/main.html
@@ -91,7 +91,7 @@
     <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="alchemy-courses"
              role="tabpanel"
              aria-hidden="false">
-      <div class="mdc-layout-grid__inner">
+      <div id="alchemy-course-view" class="mdc-layout-grid__inner">
         <div class="mdc-card mdc-layout-grid__cell--span-12">
           <section class="mdc-card__primary">
             <h1 class="mdc-typography--headline">Courses</h1>
@@ -154,315 +154,7 @@
           </section>
         </div>
       </div>
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-card mdc-layout-grid__cell--span-12">
-          <section class="mdc-card__primary">
-            <h1 class="mdc-typography--headline">Add Course</h1>
-            <div class="mdc-layout-grid__inner">
-              <div id="alchemy-course-add-input--code"
-                   class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-layout-grid__cell--span-6">
-                <i class="material-icons mdc-text-field__icon" tabindex="0">search</i>
-                <input type="text" class="mdc-text-field__input">
-                <label for="alchemy-course-filter--search-input" class="mdc-text-field__label">Search</label>
-                <div class="mdc-text-field__bottom-line"></div>
-              </div>
-              <div id="alchemy-course-add-input--department" class="mdc-select  mdc-layout-grid__cell--span-4"
-                   role="listbox">
-                <div class="mdc-select__surface" tabindex="0">
-                  <div class="mdc-select__label"></div>
-                  <div class="mdc-select__selected-text"></div>
-                  <div class="mdc-select__bottom-line"></div>
-                </div>
-                <div class="mdc-menu mdc-select__menu">
-                  <ul class="mdc-list mdc-menu__items">
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="mdc-layout-grid__inner">
-              <div class="mdc-layout-grid__cell--span-12">
-                <div id="alchemy-course-filter--by-search" class="mdc-data-table">
-                  <table class="mdc-data-table__content">
-                    <thead>
-
-                    </thead>
-                    <tbody>
-
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-          </section>
-          <!-- ... content ... -->
-          <section class="mdc-card__actions mdc-card__actions--full-bleed">
-            <button class="mdc-button mdc-button--compact mdc-card__action"></button>
-            <button class="mdc-button mdc-button--compact mdc-card__action"></button>
-          </section>
-
-        </div>
-      </div>
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-card mdc-theme--background mdc-layout-grid__cell--span-12">
-          <div class="mdc-card__actions mdc-card__actions--full-bleed">
-            <div class="mdc-card__action-buttons">
-              <button class="mdc-button mdc-button--compact mdc-card__action mdc-card__action--button">Action 1</button>
-              <button class="mdc-button mdc-button--compact mdc-card__action mdc-card__action--button">Action 2</button>
-            </div>
-            <div class="mdc-card__action-icons">
-              <i class="material-icons mdc-card__action mdc-card__action--icon" tabindex="0" role="button"
-                 title="Share">share</i>
-              <i class="material-icons mdc-card__action mdc-card__action--icon" tabindex="0" role="button"
-                 title="More options">more_vert</i>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell--span-12">
-          <div class="mdc-card mdc-theme--background">
-            <section class="mdc-card__primary">
-              <h1 class="mdc-card__title mdc-card__title--large">Add new course</h1>
-            </section>
-
-            <section class="mdc-card__supporting-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat.
-            </section>
-            <section class="examples">
-              <h2 class="mdc-theme--text-primary-on-background">Expansion Panel (Single)</h2>
-              <div id="demo-single">
-                <div data-mdc-auto-init="MDCExpansionPanel" class="mdc-expansion-panel mdc-expansion-panel--collapsed">
-                  <div class="mdc-expansion-panel__header">
-                    <!-- Summary Content -->
-                    <i
-                      class="mdc-expansion-panel__icon material-icons mdc-expansion-panel--summary mdc-expansion-panel__header__section">done_all</i>
-                    <span
-                      class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click mdc-expansion-panel--summary mdc-expansion-panel__header__section">Title</span>
-                    <!-- Details Content -->
-                    <i
-                      class="mdc-expansion-panel__icon material-icons mdc-expansion-panel--details mdc-expansion-panel__header__section">home</i>
-                    <span
-                      class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click mdc-expansion-panel--details mdc-expansion-panel__header__section">Expanded Title</span>
-                    <!-- Static Content -->
-                    <i class="material-icons mdc-expansion-panel__expansion-icon"></i>
-                  </div>
-                  <div class="mdc-expansion-panel__body">
-                    <p class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">Body</p>
-                  </div>
-                  <div class="mdc-expansion-panel__footer">
-                    <span class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">Footer</span>
-                    <div class="mdc-expansion-panel__footer__button-bar">
-                      <button class="mdc-button mdc-expansion-panel--no-click">cancel</button>
-                      <button class="mdc-button mdc-expansion-panel--no-click">accept</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <h2 class="mdc-theme--text-primary-on-background">Expansion Panel (Accordion)</h2>
-              <div data-mdc-auto-init="MDCExpansionPanelAccordion" class="mdc-expansion-panel-accordion">
-                <div data-mdc-auto-init="MDCExpansionPanel" class="mdc-expansion-panel mdc-expansion-panel--collapsed">
-                  <div class="mdc-expansion-panel__header">
-                    <!-- Summary Content -->
-                    <i
-                      class="mdc-expansion-panel__icon material-icons mdc-expansion-panel--summary mdc-expansion-panel__header__section">done_all</i>
-                    <span
-                      class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click mdc-expansion-panel--summary mdc-expansion-panel__header__section">Title</span>
-                    <!-- Details Content -->
-                    <i
-                      class="mdc-expansion-panel__icon material-icons mdc-expansion-panel--details mdc-expansion-panel__header__section">home</i>
-                    <span
-                      class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click mdc-expansion-panel--details mdc-expansion-panel__header__section">Expanded Title</span>
-                    <!-- Static Content -->
-                    <i class="material-icons mdc-expansion-panel__expansion-icon"></i>
-                  </div>
-                  <div class="mdc-expansion-panel__body">
-                    <p class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">Body</p>
-                  </div>
-                  <div class="mdc-expansion-panel__footer">
-                    <span class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">Footer</span>
-                    <div class="mdc-expansion-panel__footer__button-bar">
-                      <button class="mdc-button mdc-expansion-panel--no-click">cancel</button>
-                      <button class="mdc-button mdc-expansion-panel--no-click">accept</button>
-                    </div>
-                  </div>
-                </div>
-
-                <div data-mdc-auto-init="MDCExpansionPanel" class="mdc-expansion-panel mdc-expansion-panel--collapsed">
-                  <div class="mdc-expansion-panel__header">
-                    <!-- Summary Content -->
-                    <i
-                      class="mdc-expansion-panel__icon material-icons mdc-expansion-panel--summary mdc-expansion-panel__header__section">done_all</i>
-                    <span
-                      class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click mdc-expansion-panel--summary mdc-expansion-panel__header__section">Title</span>
-                    <!-- Details Content -->
-                    <i
-                      class="mdc-expansion-panel__icon material-icons mdc-expansion-panel--details mdc-expansion-panel__header__section">home</i>
-                    <span
-                      class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click mdc-expansion-panel--details mdc-expansion-panel__header__section">Expanded Title</span>
-                    <!-- Static Content -->
-                    <i class="material-icons mdc-expansion-panel__expansion-icon"></i>
-                  </div>
-                  <div class="mdc-expansion-panel__body">
-                    <p class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">Body</p>
-                  </div>
-                  <div class="mdc-expansion-panel__footer">
-                    <span class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">Footer</span>
-                    <div class="mdc-expansion-panel__footer__button-bar">
-                      <button class="mdc-button mdc-expansion-panel--no-click">cancel</button>
-                      <button class="mdc-button mdc-expansion-panel--no-click">accept</button>
-                    </div>
-                  </div>
-                </div>
-
-                <div data-mdc-auto-init="MDCExpansionPanel" class="mdc-expansion-panel mdc-expansion-panel--collapsed">
-                  <div class="mdc-expansion-panel__header">
-                    <!-- Summary Content -->
-                    <i
-                      class="mdc-expansion-panel__icon material-icons mdc-expansion-panel--summary mdc-expansion-panel__header__section">done_all</i>
-                    <span
-                      class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click mdc-expansion-panel--summary mdc-expansion-panel__header__section">Title</span>
-                    <!-- Details Content -->
-                    <i
-                      class="mdc-expansion-panel__icon material-icons mdc-expansion-panel--details mdc-expansion-panel__header__section">home</i>
-                    <span
-                      class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click mdc-expansion-panel--details mdc-expansion-panel__header__section">Expanded Title</span>
-                    <!-- Static Content -->
-                    <i class="material-icons mdc-expansion-panel__expansion-icon"></i>
-                  </div>
-                  <div class="mdc-expansion-panel__body">
-                    <p class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">Body</p>
-                  </div>
-                  <div class="mdc-expansion-panel__footer">
-                    <span class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">Footer</span>
-                    <div class="mdc-expansion-panel__footer__button-bar">
-                      <button class="mdc-button mdc-expansion-panel--no-click">cancel</button>
-                      <button class="mdc-button mdc-expansion-panel--no-click">accept</button>
-                    </div>
-                  </div>
-                </div>
-
-                <div data-mdc-auto-init="MDCExpansionPanel"
-                     class="mdc-expansion-panel mdc-expansion-panel--collapsed mdc-expansion-panel-accordion--excluded">
-                  <div class="mdc-expansion-panel__header">
-                    <!-- Summary Content -->
-                    <i
-                      class="mdc-expansion-panel__icon material-icons mdc-expansion-panel--summary mdc-expansion-panel__header__section">done_all</i>
-                    <span
-                      class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click mdc-expansion-panel--summary mdc-expansion-panel__header__section">Title</span>
-                    <!-- Details Content -->
-                    <i
-                      class="mdc-expansion-panel__icon material-icons mdc-expansion-panel--details mdc-expansion-panel__header__section">home</i>
-                    <span
-                      class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click mdc-expansion-panel--details mdc-expansion-panel__header__section">Expanded Title</span>
-                    <!-- Static Content -->
-                    <i class="material-icons mdc-expansion-panel__expansion-icon"></i>
-                    <span
-                      class=" mdc-expansion-panel__header__section mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">You can exclude a panel from the accordion</span>
-                  </div>
-                  <div class="mdc-expansion-panel__body">
-                    <p class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">Body</p>
-                  </div>
-                  <div class="mdc-expansion-panel__footer">
-                    <span class="mdc-expansion-panel__text-primary mdc-expansion-panel--no-click">Footer</span>
-                    <div class="mdc-expansion-panel__footer__button-bar">
-                      <button class="mdc-button mdc-expansion-panel--no-click">cancel</button>
-                      <button class="mdc-button mdc-expansion-panel--no-click">accept</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
-            <!--<div role="progressbar" class="mdc-linear-progress mdc-linear-progress&#45;&#45;indeterminate">-->
-            <!--<div class="mdc-linear-progress__buffering-dots"></div>-->
-            <!--<div class="mdc-linear-progress__buffer"></div>-->
-            <!--<div class="mdc-linear-progress__bar mdc-linear-progress__primary-bar">-->
-            <!--<span class="mdc-linear-progress__bar-inner"></span>-->
-            <!--</div>-->
-            <!--<div class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar">-->
-            <!--<span class="mdc-linear-progress__bar-inner"></span>-->
-            <!--</div>-->
-            <!--</div>-->
-            <section class="mdc-card__actions">
-
-              <button class="mdc-button mdc-button--compact mdc-card__action">Action 1</button>
-              <button class="mdc-button mdc-button--compact mdc-card__action">Action 2</button>
-            </section>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="alchemy-timetable"
-             role="tabpanel"
-             aria-hidden="true">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-card mdc-layout-grid__cell--span-12">
-          <section class="mdc-card__primary">
-            <h1 class="mdc-typography--headline">Courses</h1>
-            <div class="mdc-layout-grid__inner">
-              <div id="alchemy-course-filter--search"
-                   class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-layout-grid__cell--span-6">
-                <i class="material-icons mdc-text-field__icon" tabindex="0">search</i>
-                <input type="text" id="alchemy-course-filter--search-input" class="mdc-text-field__input">
-                <label for="alchemy-course-filter--search-input" class="mdc-text-field__label">Search</label>
-                <div class="mdc-text-field__bottom-line"></div>
-              </div>
-              <div id="alchemy-course-filter--by-branch" class="mdc-select  mdc-layout-grid__cell--span-4"
-                   role="listbox">
-                <div class="mdc-select__surface" tabindex="0">
-                  <div class="mdc-select__label"></div>
-                  <div class="mdc-select__selected-text"></div>
-                  <div class="mdc-select__bottom-line"></div>
-                </div>
-                <div class="mdc-menu mdc-select__menu">
-                  <ul class="mdc-list mdc-menu__items">
-                  </ul>
-                </div>
-              </div>
-              <div id="alchemy-course-filter--by-level" class="mdc-select  mdc-layout-grid__cell--span-2"
-                   role="listbox">
-                <div class="mdc-select__surface" tabindex="0">
-                  <div class="mdc-select__label">Select Level</div>
-                  <div class="mdc-select__selected-text"></div>
-                  <div class="mdc-select__bottom-line"></div>
-                </div>
-                <div class="mdc-menu mdc-select__menu">
-                  <ul class="mdc-list mdc-menu__items">
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="mdc-layout-grid__inner">
-              <div class="mdc-layout-grid__cell--span-12">
-                <div id="alchemy-course-filter--by-search" class="mdc-data-table">
-                  <table class="mdc-data-table__content">
-                    <thead>
-
-                    </thead>
-                    <tbody>
-
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-          </section>
-          <!-- ... content ... -->
-          <section class="mdc-card__actions mdc-card__actions--full-bleed">
-            <button class="mdc-button mdc-button--compact mdc-card__action"></button>
-            <button class="mdc-button mdc-button--compact mdc-card__action"></button>
-          </section>
-
-        </div>
-      </div>
-      <div class="mdc-layout-grid__inner">
+      <div id="alchemy-course-add" class="mdc-layout-grid__inner">
         <div class="mdc-card mdc-layout-grid__cell--span-12">
           <section class="mdc-card__primary">
             <h1 class="mdc-typography--headline">Add Course</h1>
